--- a/WordCounter-MavenProject/src/main/webapp/paraForm.html
+++ b/WordCounter-MavenProject/src/main/webapp/paraForm.html
@@ -7,7 +7,7 @@
 <body>
 	<h2>Upload</h2>
 	<form action="para" method="post">
-		Para:<textarea name="para"></textarea><br>
+		Para:<textarea name="para" required></textarea><br>
 		<button type="submit">Submit</button>
 	</form>
 </body>
