--- a/WordCounter-MavenProject/src/main/webapp/home.html
+++ b/WordCounter-MavenProject/src/main/webapp/home.html
@@ -1,11 +1,42 @@
-<!DOCTYPE html>
-<html>
+</html><!DOCTYPE html>
+<html lang="en">
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WordCounter</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+        body {
+            font-family: "Montserrat", sans-serif;
+        }
+        h1{margin-bottom: 30px;}
+        
+    </style>
 </head>
+
 <body>
-	<h1 style="font-weight: unset;">Welcome To Word Counter</h1>
-	<a href="paraForm.html">upload</a>
+    <main>
+        <section class="section01">
+            <div class="container-fluid">
+                <div class="row box01 text-center justify-content-center align-items-center" style="min-height: 100vh;">
+                    <div class="col col-lg-6 col-md-9 col-sm-10 col-10 box02 bg-body-tertiary rounded-3 p-5">
+                        <div class="box03">
+                            <h1>Welcome To Word Counter</h1>
+                            <a href="paraForm.html" class="btn btn-secondary btn-sm ps-4 pe-4">Upload &nbsp;<i class="bi bi-upload"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
