--- a/WordCounter-MavenProject/src/main/webapp/paraForm.html
+++ b/WordCounter-MavenProject/src/main/webapp/paraForm.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upload-Para</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+        body {
+            font-family: "Montserrat", sans-serif;
+        }
+    </style>
 </head>
+
 <body>
-	<h2>Upload</h2>
-	<form action="para" method="post">
-		Para:<textarea name="para" required></textarea><br>
-		<button type="submit">Submit</button>
-	</form>
+    <main>
+        <section class="section01">
+            <div class="container-fluid">
+                <div class="row justify-content-center align-items-center" style="min-height: 100vh;">
+                    <div class="col col-lg-5 col-md-7 col-sm-8 col-10 bg-body-tertiary p-5 rounded-3">
+                        <form action="para" method="post">
+                            <div>
+                                <h3>Upload</h3>
+                            </div>
+                            <div class="box01 form-floating mt-3">
+                                <textarea class="form-control" placeholder="Leave a comment here" required name="para"
+                                    id="floatingTextarea"></textarea>
+                                <label for="floatingTextarea">Paragraph</label>
+                                <button type="submit" class="btn btn-secondary btn-sm mt-4 ps-4 pe-4">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
