Build Process completed

--- a/WordCounter-MavenProject/src/main/webapp/paraForm.html
+++ b/WordCounter-MavenProject/src/main/webapp/paraForm.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <main>
+     <main>
         <section class="section01">
             <div class="container-fluid">
                 <div class="row justify-content-center align-items-center" style="min-height: 100vh;">
@@ -30,10 +30,9 @@
                             <div>
                                 <h3>Upload</h3>
                             </div>
-                            <div class="box01 form-floating mt-3">
-                                <textarea class="form-control" placeholder="Leave a comment here" required name="para"
+                            <div class="box01  mt-3">
+                                <textarea class="form-control" placeholder="Paragraph" required name="para"
                                     id="floatingTextarea"></textarea>
-                                <label for="floatingTextarea">Paragraph</label>
                                 <button type="submit" class="btn btn-secondary btn-sm mt-4 ps-4 pe-4">Submit</button>
                             </div>
                         </form>
